--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Welcome to my Web3 Journey</title>
+    <meta charset="UTF-8">
+    <title>VeeevAO | Web3 Legal & Governance</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            background-color: #f5f5f5;
+            color: #333;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin: 0;
+        }
+        p {
+            font-size: 1.2em;
+            margin-top: 10px;
+        }
+        section {
+            margin-top: 50px;
+        }
+        .article-list a {
+            text-decoration: none;
+            color: #007acc;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, I'm Veeev!</h1>
-    <p>PhD in International Law | Exploring Blockchain, Web3, and Digital Assets</p>
-    <p>Stay tuned for my articles and research!</p>
+    <header>
+        <h1>VeeevAO</h1>
+        <p>PhD | Web3 Enthusiast | Legal & Governance</p>
+    </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p>I am a legal professional transitioning into Web3, blockchain, and digital assets. Exploring the legal and governance ecosystem.</p>
+    </section>
+
+    <section>
+        <h2>My Articles</h2>
+        <div class="article-list">
+            <p><a href="#">• Blockchain Basics for Legal Professionals (Coming Soon)</a></p>
+            <p><a href="#">• Understanding Smart Contracts and Legal Contracts (Coming Soon)</a></p>
+        </div>
+    </section>
+
+    <section>
+        <h2>Contact</h2>
+        <p>Connect with me on <a href="https://www.linkedin.com/in/vivian-adaeze-ozue-ph-d-75a98321a/" target="_blank">LinkedIn</a>.</p>
+    </section>
 </body>
 </html>
