"Added link to Blockchain Basics article"
Blockchain Basics for Legal Professionals

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section>
         <h2>My Articles</h2>
         <div class="article-list">
-            <p><a href="#">• Blockchain Basics for Legal Professionals (Coming Soon)</a></p>
+            <p><a href="blockchain-basics.html">• Blockchain Basics for Legal Professionals</a></p>
             <p><a href="#">• Understanding Smart Contracts and Legal Contracts (Coming Soon)</a></p>
         </div>
     </section>
