--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section>
         <h2>My Articles</h2>
         <div class="article-list">
-            <p><a href="blockchain-basics-for-legal-professionals.html">Read more</a></p>
+            <p><a href="blockchain-basics-for-legal-professionals.html">Read the article</a></p>
             <p><a href="#">• Understanding Smart Contracts and Legal Contracts (Coming Soon)</a></p>
         </div>
     </section>
