--- a/index.html
+++ b/index.html
@@ -45,12 +45,16 @@
 
     <section>
         <h2>My Articles</h2>
-        <div class="article-list">
-            <p><a href="blockchain-basics-for-legal-professionals.html">Read the article</a></p>
-            <p><a href="#">• Understanding Smart Contracts and Legal Contracts (Coming Soon)</a></p>
-        </div>
-    </section>
-
+<ul>
+  <li>
+    <a href="blockchain-basics-for-legal-professionals.html">
+      Blockchain Basics for Legal Professionals
+    </a>
+  </li>
+  <li>
+    Understanding Smart Contracts and Legal Contracts <em>(Coming Soon)</em>
+  </li>
+</ul>
     <section>
         <h2>Contact</h2>
         <p>Connect with me on <a href="https://www.linkedin.com/in/vivian-adaeze-ozue-ph-d-75a98321a/" target="_blank">LinkedIn</a>.</p>
