--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 </a>
             </li>
             <li>
+                <a href="blockchain-governance-north-america.html">
+                    Blockchain Governance: A Review of Global Regulatory Frameworks (North America)
+                    </a>
+        </li>
+        <li>
                 Understanding Smart Contracts and Legal Contracts <em>(Coming Soon)</em>
             </li>
         </ul>
