--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
     Blockchain Governance: A Review of Global Regulatory Frameworks (North America)
   </a>
 </li>
+            <li>
+  <a href="/europe-governance/">
+    Blockchain Governance: A Review of Global Regulatory Frameworks (Europe)
+  </a>
+</li>
         <li>
                 Understanding Smart Contracts and Legal Contracts <em>(Coming Soon)</em>
             </li>
