--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     Blockchain Governance: A Review of Global Regulatory Frameworks (North America)
   </a>
 </li>
-            <li>
-  <a href="/europe-governance/">
+          <li>
+  <a href="https://veeevao.github.io/Blockchain-Governance-A-Review-of-Global-Regulatory-Frameworks-Europe-/">
     Blockchain Governance: A Review of Global Regulatory Frameworks (Europe)
   </a>
 </li>
